--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 
-    <p class="main-words">Psychedelic City</p>
+    <!-- <p class="main-words">Psychedelic City</p> -->
 
+    <img src="/img/psychedelic-city.jpeg" alt="psychedelic city">
 </body>
 </html>
 
