--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/style.css">
-    <title></title>
+    <title>psychedelic city</title>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
-
-    <!-- <p class="main-words">Psychedelic City</p> -->
-
     <img src="/img/psychedelic-city.jpeg" alt="psychedelic city">
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
 </body>
 </html>
 
